[package]
name = "etcommon-trie-rocksdb"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Rocksdb adaptor for trie."
repository = "https://github.com/ethereumproject/etcommon-rs"
keywords = ["ethereum"]

[lib]
name = "trie_rocksdb"

[dependencies]
etcommon-trie = { version = "0.4", path = ".." }
etcommon-bigint = { version = "0.2", path = "../../bigint" }
rocksdb = { git = "https://github.com/paritytech/rust-rocksdb" }